# vinylripper

./: .gitignore  AGENTS.md  LICENSE  README.md  build.bat  pyproject.toml  requirements-linux.txt  requirements-macos.txt  requirements-windows.txt  requirements.txt  setup.ps1  setup.sh
.github/workflows/: build.yml
docs/: index.html  robots.txt  sitemap.xml
scripts/: build.py  build_appimage.sh  download_ffmpeg.py
scripts/appimage/: AppRun  generate_icon.py  vinylripper.desktop
tests/: test_audio_processor.py  test_config.py  test_discogs_client.py  test_metadata.py  test_recorder.py  test_splitter.py
vinylripper/: main.py
vinylripper/core/: audio_processor.py  config.py  discogs_client.py  markers.py  metadata.py  needle_detector.py  recorder.py  splitter.py  states.py
vinylripper/ui/: main_window.py  search_dialog.py  settings_dialog.py  waveform_widget.py
vinylripper/ui/tabs/: check_level_tab.py  cleanup_audio_tab.py  recording_tab.py  split_tracks_tab.py
