[project]
name = "vinylripper"
version = "0.2.0"
description = "Record audio from sound card with live waveform display and Discogs metadata lookup"
requires-python = ">=3.11"
dependencies = [
    "sounddevice>=0.5.0",
    "soundfile>=0.12.0",
    "numpy>=1.26.0",
    "mutagen>=1.47.0",
    "requests>=2.31.0",
    "pyqt6>=6.5.0",
]

[project.scripts]
vinylripper = "vinylripper.main:main"
